WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116491
[WK2] loader/go-back-cached-main-resource.html fails
https://bugs.webkit.org/show_bug.cgi?id=116491
Summary
[WK2] loader/go-back-cached-main-resource.html fails
Ryosuke Niwa
Reported
2013-05-20 19:01:50 PDT
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=loader%2Fgo-back-cached-main-resource.html
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r150386%20(9028)/results.html
--- /Volumes/Data/slave/mountainlion-release-tests-wk2/build/layout-test-results/loader/go-back-cached-main-resource-expected.txt +++ /Volumes/Data/slave/mountainlion-release-tests-wk2/build/layout-test-results/loader/go-back-cached-main-resource-actual.txt @@ -1,19 +1,19 @@ -resources/first-page.html - willSendRequest <NSURLRequest URL resources/first-page.html, main document URL first-page.html, http method GET> redirectResponse (null) +/Volumes/Data/slave/mountainlion-release-tests-wk2/build/LayoutTests/loader/resources/first-page.html - willSendRequest <NSURLRequest URL /Volumes/Data/slave/mountainlion-release-tests-wk2/build/LayoutTests/loader/resources/first-page.html, main document URL first-page.html, http method GET> redirectResponse (null) <unknown> - didFinishLoading -resources/first-page.html - didReceiveResponse <NSURLResponse resources/first-page.html, http status code 0> -resources/first-page.html - didFinishLoading -resources/other-page.html - willSendRequest <NSURLRequest URL resources/other-page.html, main document URL other-page.html, http method GET> redirectResponse (null) -resources/other-page.html - didReceiveResponse <NSURLResponse resources/other-page.html, http status code 0> -resources/other-page.html - didFinishLoading -resources/first-page.html - willSendRequest <NSURLRequest URL resources/first-page.html, main document URL first-page.html, http method GET> redirectResponse (null) -resources/first-page.html - didReceiveResponse <NSURLResponse resources/first-page.html, http status code 0> -resources/first-page.html - didFinishLoading -resources/other-page.html - willSendRequest <NSURLRequest URL resources/other-page.html, main document URL other-page.html, http method GET> redirectResponse (null) -resources/other-page.html - didReceiveResponse <NSURLResponse resources/other-page.html, http status code 0> -resources/other-page.html - didFinishLoading -resources/first-page.html - willSendRequest <NSURLRequest URL resources/first-page.html, main document URL , http method GET> redirectResponse (null) -resources/first-page.html - didReceiveResponse <NSURLResponse resources/first-page.html, http status code 0> -resources/first-page.html - didFinishLoading +/Volumes/Data/slave/mountainlion-release-tests-wk2/build/LayoutTests/loader/resources/first-page.html - didReceiveResponse <NSURLResponse /Volumes/Data/slave/mountainlion-release-tests-wk2/build/LayoutTests/loader/resources/first-page.html, http status code 0> +/Volumes/Data/slave/mountainlion-release-tests-wk2/build/LayoutTests/loader/resources/first-page.html - didFinishLoading +other-page.html - willSendRequest <NSURLRequest URL other-page.html, main document URL other-page.html, http method GET> redirectResponse (null) +other-page.html - didReceiveResponse <NSURLResponse other-page.html, http status code 0> +other-page.html - didFinishLoading +first-page.html - willSendRequest <NSURLRequest URL first-page.html, main document URL first-page.html, http method GET> redirectResponse (null) +first-page.html - didReceiveResponse <NSURLResponse first-page.html, http status code 0> +first-page.html - didFinishLoading +other-page.html - willSendRequest <NSURLRequest URL other-page.html, main document URL other-page.html, http method GET> redirectResponse (null) +other-page.html - didReceiveResponse <NSURLResponse other-page.html, http status code 0> +other-page.html - didFinishLoading +first-page.html - willSendRequest <NSURLRequest URL first-page.html, main document URL , http method GET> redirectResponse (null) +first-page.html - didReceiveResponse <NSURLResponse first-page.html, http status code 0> +first-page.html - didFinishLoading This test check the following situation: First you navigate to a page (first-page.html).
Attachments
proposed fix
(17.03 KB, patch)
2013-08-08 13:04 PDT
,
Alexey Proskuryakov
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-05-20 19:03:40 PDT
Committed
r150397
: <
http://trac.webkit.org/changeset/150397
>
Alexey Proskuryakov
Comment 2
2013-05-21 10:13:00 PDT
+/Volumes/Data/slave/mountainlion-release-tests-wk2/build/LayoutTests/loader/resources/first-page.html This is certainly wrong, as it dumps full path, which is machine specific. Should we roll out <
http://trac.webkit.org/r150386
>?
Alex Christensen
Comment 3
2013-05-21 10:23:07 PDT
I think
r150386
is correct, but it exposes another bug in WK2 or WebKitTestRunner. We might end up rolling it back, but give me some time to look into this.
Alex Christensen
Comment 4
2013-05-21 13:11:47 PDT
I guess roll it back for now. I can always submit a complete patch later.
Alexey Proskuryakov
Comment 5
2013-08-08 09:39:33 PDT
This bug should have been closed with the rollout, but I'm now landing that change again, and the test still fails. Will use this bug to track fixing it separately.
Alexey Proskuryakov
Comment 6
2013-08-08 13:04:13 PDT
Created
attachment 208364
[details]
proposed fix
Tim Horton
Comment 7
2013-08-08 13:42:18 PDT
Comment on
attachment 208364
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=208364&action=review
> Tools/ChangeLog:17 > + Return last path component in cases where we used to return a full path, which is > + never desirable. Added a null check to basePath to prevent potentially getting > + an Objective C exception.
How does this not change more tests?
Alexey Proskuryakov
Comment 8
2013-08-08 13:51:20 PDT
Comment on
attachment 208364
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=208364&action=review
>> Tools/ChangeLog:17 >> + an Objective C exception. > > How does this not change more tests?
DumpRenderTree changes in this patch are meant to be an inconsequential cleanup. We couldn't have full paths in tests before, because that would fail on all other machines, and we hopefully didn't raise exceptions too much (I only saw that with some other code in my tree). I am a bit surprised that so few WebKit2 results changed. Perhaps we overused skipping?
Alexey Proskuryakov
Comment 9
2013-08-08 15:37:04 PDT
Committed <
http://trac.webkit.org/changeset/153852
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug